4.0.1
-----
1. Fix highlighting jumplist letter when jumping/scrolling lists.
2. Re-add placing song info into window title.
3. Move screensaver text every 5 minutes.
4. Increase now-playing cover menu button opacity.
5. Revert to previous String.replaceAll polyfill, fixes rendering issues.
6. Fix text position when using thick mobile now-playing bar on iOS.

4.0.0
-----
 1. Unify MAI layout between desktop and mobile.
 2. Allow mobile MAI to use 3 column layout.
 3. Force MAI tabs if layout too narrow.
 4. Add option to show a now-playing bar at the bottom of browse and queue
    views in mobile layout.
 5. Slightly increase background image blur.
 6. Show track and album names in relevant MAI section.
 7. Remove "Artist", "Album", and "Track" headers from expanded MAI sections.
 8. Show now-playing bar progress even for radio.
 9. Make more subtitle items clickable in search results for non-touch devices.
10. Support LMS8.4 release_type.
11. When listing artist albums separate out normal and compilation albums.
12. Reduce number of JSONRPC calls at start-up.
13. Fix long-press on power button / player icon not updating its assignment
    on changing the option.
14. Remove option for stop button.
15. Change long-press on play/pause from showing sleep dialog to stopping
    playback.
16. Remove option to not show artwork.
17. Remove option to sort home screen.
18. Show album year for playlist tracks.
19. Slightly adjust grid metrics, to allow more columns when thin, etc.
20. Simpler String.replaceAll polyfill.
21. Remove notification support added for CORE32, no longer supported.
22. Add (server side) option to show all compilation tracks when navigate into
    a compilation from a contributing artist.
23. Only show artist under MAI album list if different.
24. In desktop layout allow queue to be pinned/unpinned.
25. Add 'Automatic' theme, switches between Light/Dark based upon browser's
    dark mode setting.